@@ -26,6 +26,7 @@ struct configuration {
 	double	RTTYsweetspot;
 	double	PSKsweetspot;
 	bool	StartAtSweetSpot;
+        bool    WaterfallHistoryDefault;
 // for PSK  & PSK mail interface
 	bool	PSKmailSweetSpot;
 	int		SearchRange;
@@ -140,16 +141,16 @@ struct configuration {
 	int		chkUSEMEMMAPis;
 	int		chkUSEHAMLIBis;
 	int		chkUSERIGCATis;
-	string  HamRigName;
-	string  HamRigDevice;
-	int		HamRigBaudrate;
+	string  PTTdev;
 	string	CWFSKport;
+	string  HamRigDevice;
+	string  HamRigName;
+	int	HamRigBaudrate;
 // Operator data
 	string	myCall;
 	string	myQth;
 	string	myName;
 	string	myLocator;
-	string  PTTdev;
 	string	secText;
 // Sound card
 	int	btnAudioIOis;
@@ -214,8 +215,6 @@ struct configuration {
 
 	string		ui_scheme;
 
-	string strCommPorts;
-	
 	int rx_msgid;
 	int tx_msgid;
 	string arq_address;
